Refacto gmsaas installer

--- a/src/com/ats/gui/alert/CredentialsAlert.mxml
+++ b/src/com/ats/gui/alert/CredentialsAlert.mxml
@@ -8,14 +8,12 @@
 	<panels:TitlePanel id="inputPanel" label="Genymotion credentials" height="100%" width="100%"/>
 	
 	<panels:BottomButtons width="100%">
-		<buttons:SmallButton label="Ok" click="setCredentials()" fontSize="14"/>
+		<!-- <buttons:SmallButton label="Ok" click="setCredentials()" fontSize="14"/> -->
 		<buttons:SmallButton label="Cancel" click="cancelButtonHandler(event)" fontSize="14"/>
 	</panels:BottomButtons>
 	
 	<fx:Script>
-		<![CDATA[
-			import com.ats.managers.gmsaas.GmsaasManager;
-			
+		<![CDATA[			
 			import mx.events.FlexEvent;
 			import mx.managers.PopUpManager;
 			
@@ -37,7 +35,7 @@
 				}
 			}
 			
-			private function setCredentials():void {
+			/* private function setCredentials():void {
 				
 				content.enabled = false;
 				
@@ -66,7 +64,7 @@
 				}
 				
 				//infoLabel.text = "Connecting..."
-			}
+			} */
 			
 			protected function creationCompleteHandler(event:FlexEvent):void
 			{
@@ -77,7 +75,7 @@
 			
 			private function enterKeyHandler(ev:Event):void{
 				content.removeEventListener("enterKey", enterKeyHandler);
-				setCredentials()
+				// setCredentials()
 			}
 			
 		]]>
