--- a/src/com/ats/gui/alert/CredentialsAlert.mxml
+++ b/src/com/ats/gui/alert/CredentialsAlert.mxml
@@ -46,7 +46,7 @@
 				
 				if (login.length > 0 &&  password.length > 0) {
 					
-					var alert:CredentialsAlert = this
+					/*var alert:CredentialsAlert = this
 					GmsaasManager.getInstance().login(login, password, function(result:Object, error:String):void {
 						//infoLabel.text = null
 						
@@ -62,7 +62,7 @@
 						}
 						
 						successCallback(alert)
-					})
+					})*/
 				}
 				
 				//infoLabel.text = "Connecting..."
